Fixes spacing on header

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -12,7 +12,7 @@
 .site-title {
   @include relative-font-size(2.625);
   font-weight: 300;
-  line-height: $base-line-height * $base-font-size * 5.25;
+  padding: 1rem 0;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
@@ -51,7 +51,7 @@
 
   @include media-query($on-palm) {
     position: absolute;
-    top: 9px;
+    top: 13px;
     right: $spacing-unit / 2;
     background-color: $background-color;
     border: 1px solid $grey-color-light;
